--- a/index.css
+++ b/index.css
@@ -229,4 +229,113 @@
     background-color: #f15a29;
     color: white;
   }
+
+
+  /* Another section */
+
+
+.food-slider-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../Images/backgrounds/foodsBg.jpg);
+    background-repeat: no-repeat;
+    margin-top: 150px;
+    background-size: cover;
+    height: 599px;
+  }
+  
+  .food-slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 400px;
+    width: 60%;
+    background-color: white;
+    margin: auto;
+  }
+  .slider {
+    display: flex;
+    flex-direction: row;
+    height: 65px;
+    width: 100%;
+    justify-content: center;
+    font-size: large;
+  }
+  #slide-one {
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+  }
+  #slide-two {
+    border: 1px solid gray;
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    background-color: lightgray;
+  }
+  #slide-three {
+    border: 1px solid gray;
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    background-color: lightgray;
+  }
+  #slide-four {
+    border: 1px solid gray;
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    background-color: lightgray;
+  }
+  .slider-arrows {
+    color: #f15a29;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 280px;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    padding: 0 0 20px 0;
+  }
+  .slider-left-arrow {
+    margin: 0 0 10px 10px;
+  }
+  .slider-right-arrow {
+    margin: 0 10px 10px 0;
+  }
+  .left {
+    border: solid #f15a29;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 0 0 20px 20px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+  }
+  .right {
+    border: solid #f15a29;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 0 0 20px 20px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  #slider-image-one {
+    width: 100%;
+    height: auto;
+  }
+  #slider-image-two {
+    width: 100%;
+    height: auto;
+  }
+  #slider-image-three {
+    width: 100%;
+    height: auto;
+  }
+  
   
